--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -6,23 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>AXIT</title>
 </head>
 
 <body>
     <header>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Pricing</a>
-        <a href="#">Reviews</a>
-        <a href="#">Contact</a>
+        <p class="company-label">AX<span class="company-label-second">IT</span></p>
+        <div>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Pricing</a>
+            <a href="#">Reviews</a>
+            <a href="#">Contact</a>
+        </div>
     </header>
     <main>
         <section class="description">
             <div class="product-description">
-                <span>AXIT</span>
-                <h1>Modern axure template for beatuful prototypes</h1>
+                <p class="company-label-description">AX<span class="company-label-second">IT</span></p>
+                <h1>Modern axure template <br> for beatuful prototypes</h1>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, accusantium similique,
                     voluptatum eum maxime animi aperiam est,
@@ -30,12 +34,12 @@
                 <button>Download</button>
             </div>
             <div class="register-form">
-                <span>Try Your Free Trial Today</span>
+                <p>Try Your <span class="free">Free</span> Trial Today</p>
                 <form action="#" method="post">
-                    <input type="text" id="name" value="Name">
+                    <input class="customer-name" type="text" id="name" value="Name">
                     <input type="email" id="email" value="Email">
                     <input type="text" id="password" value="Password">
-                    <input type="button" value="Get Started">
+                    <input class="submit-button" type="button" value="Get Started">
                 </form>
             </div>
         </section>
