--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -36,7 +36,7 @@
             <div class="register-form">
                 <p>Try Your <span class="free">Free</span> Trial Today</p>
                 <form action="#" method="post">
-                    <input class="customer-name" type="text" id="name" value="Name">
+                    <input type="text" id="name" value="Name">
                     <input type="email" id="email" value="Email">
                     <input type="text" id="password" value="Password">
                     <input class="submit-button" type="button" value="Get Started">
