--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -12,41 +12,19 @@
 </head>
 
 <body>
-    <header>
-        <p class="company-label">AX<span class="company-label-second">IT</span></p>
-        <div>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Pricing</a>
-            <a href="#">Reviews</a>
-            <a href="#">Contact</a>
-        </div>
+    <header class="header">
+        <img src="./img/Logo.png" alt="Compaby logo" class="company-logo">
+        <nav class="header-nav">
+            <a href="#" class="nav-btn">Features</a>
+            <a href="#" class="nav-btn">About</a>
+            <a href="#" class="nav-btn">Pricing</a>
+            <a href="#" class="nav-btn">Reviews</a>
+            <a href="#" class="nav-btn">Contact</a>
+        </nav>
     </header>
     <main>
-        <section class="description">
-            <div class="product-description">
-                <p class="company-label-description">AX<span class="company-label-second">IT</span></p>
-                <h1>Modern axure template <br> for beatuful prototypes</h1>
-                <hr>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, accusantium similique,
-                    voluptatum eum maxime animi aperiam est,
-                    dolorem ut odit ducimus iure pariatur rem illo.</p>
-                <button>Download</button>
-            </div>
-            <div class="register-form">
-                <p>Try Your <span class="free">Free</span> Trial Today</p>
-                <form action="#" method="post">
-                    <input type="text" id="name" value="Name">
-                    <input type="email" id="email" value="Email">
-                    <input type="text" id="password" value="Password">
-                    <input class="submit-button" type="button" value="Get Started">
-                </form>
-            </div>
-        </section>
+        
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
