--- a/Omnifood/index.html
+++ b/Omnifood/index.html
@@ -18,7 +18,9 @@
 
 <body>
     <header class="header">
-        <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+        <a href="#">
+            <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+        </a>
         <nav class="main-nav">
             <ul class="main-nav-list">
                 <li><a href="#" class="main-nav-link">Section 1</a></li>
@@ -300,8 +302,8 @@
                 </h2>
             </div>
 
-            <div class="container grid grid--2-cols">
-                <div class="pricing-plan">
+            <div class="container grid grid--2-cols margin-bottom-md">
+                <div class="pricing-plan pricing-plan--starter">
                     <header class="plan-header">
                         <p class="plan-name">Starter</p>
                         <p class="plan-price"><span>$</span>399</p>
@@ -314,18 +316,21 @@
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
-                            <span>Order times are between 11am and 9pm</span>
+                            <span>Order times from 11am and 9pm</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
                             <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="close-circle-outline"></ion-icon>
                         </li>
                     </ul>
                     <div class="plan-sign-up">
                         <a class="btn btn--full" href="#">Start eating well</a>
                     </div>
                 </div>
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--complete">
                     <header class="plan-header">
                         <p class="plan-name">Complete</p>
                         <p class="plan-price"><span>$</span>649</p>
@@ -335,11 +340,11 @@
                     <ul class="list">
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
-                            <span>2 meal per day</span>
+                            <span><strong>2 meal</strong> per day</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
-                            <span>Order 24/7</span>
+                            <span>Order <strong>24/7</strong></span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
@@ -356,9 +361,150 @@
 
                 </div>
             </div>
-
+            <div class="container grid">
+                <aside class="plan-details">
+                    Prices include all applicable taxes. You can cancel at any time. Buth plans include the following:
+                </aside>
+            </div>
+            <div class="container grid grid--4-cols">
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">
+                        Never cook again!
+                    </p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year, even including major holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+                    <p class="feature-title">
+                        Local and organic!
+                    </p>
+                    <p class="feature-text">
+                        Our cooks only use local, fresh, and organic products to prepare your meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+                    <p class="feature-title">
+                        No waste
+                    </p>
+                    <p class="feature-text">
+                        All our partners only use reusable containers to package all your meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+                    <p class="feature-title">
+                        Pause anytime
+                    </p>
+                    <p class="feature-text">
+                        Going on vacation? Just pause your subscription, and we refund unused days.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="section-cta">
+            <div class="container">
+                <div class="cta">
+                    <div class="cta-text-box">
+                        <h2 class="heading-secondary">
+                            Get your first meal for free!
+                        </h2>
+                        <p class="cta-text">
+                            Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can
+                            cancel or pause anytime. And the first meal is on us!
+                        </p>
+                        <form class="cta-form" action="#">
+                            <div>
+                                <label for="full-name">Full name</label>
+                                <input id="full-name" type="text" placeholder="John Smith" required>
+                            </div>
+                            <div>
+                                <label for="email">Email address</label>
+                                <input id="email" type="email" placeholder="me@example.com" required>
+                            </div>
+                            <div>
+                                <label for="select-where">Where did you hear from us?</label>
+                                <select id="select-where" required>
+                                    <option value="0" selected>Please select a value:</option>
+                                    <option value="1">YouTube</option>
+                                    <option value="2">Newspaper</option>
+                                    <option value="3">Friends and family</option>
+                                    <option value="4">Podcast</option>
+                                    <option value="5">Others</option>
+                                </select>
+                            </div>
+                            <button class="btn btn-form">Sign up now</button>
+                        </form>
+                    </div>
+                    <div class="cta-image-box" role="img" aria-label="Woman enjoin food "></div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container grid grid--5-cols">
+            <div class="logo-col">
+                <a href="#" class="footer-logo">
+                    <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+                </a>
+                <ul class="social-links">
+                    <li><a href="#">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a></li>
+                </ul>
+                <p class="copyright">Copyright &copy; 2027 by Omnifood Inc. All right reserved</p>
+            </div>
+            <div class="address-col">
+                <p class="footer-heading">Contact us</p>
+                <address class="contacts">
+                    <p>
+                        623 Harrison St., 2nd Floor, San Francisco, CA 94107
+                    </p>
+                    <p>
+                        <a href="tel:415-201-6370">415-201-6370</a>
+                        <br>
+                        <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+                    </p>
+                </address>
+            </div>
+            <nav class="nav-col">
+                <p class="footer-heading">Account</p>
+                <ul class="footer-navigation">
+                    <li><a href="#">Create account</a></li>
+                    <li><a href="#">Sign in</a></li>
+                    <li><a href="#">iOS app</a></li>
+                    <li><a href="#">Android app</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-col">
+                <p class="footer-heading">Company</p>
+                <ul class="footer-navigation">
+                    <li><a href="#">About Omnifood</a></li>
+                    <li><a href="#">For Business</a></li>
+                    <li><a href="#">Cooking partners</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-col">
+                <p class="footer-heading">Resources</p>
+                <ul class="footer-navigation">
+                    <li><a href="#">Recipe directory</a></li>
+                    <li><a href="#">Help center</a></li>
+                    <li><a href="#">Privacy & terms</a></li>
+                </ul>
+            </nav>
+
+        </div>
+    </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
