--- a/Omnifood-js/index.html
+++ b/Omnifood-js/index.html
@@ -467,7 +467,8 @@
                             <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
                         </a></li>
                 </ul>
-                <p class="copyright">Copyright &copy; 2027 by Omnifood Inc. All right reserved</p>
+                <p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood Inc. All right reserved
+                </p>
             </div>
             <div class="address-col">
                 <p class="footer-heading">Contact us</p>
@@ -513,6 +514,7 @@
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
