--- a/Omnifood-js/index.html
+++ b/Omnifood-js/index.html
@@ -24,11 +24,11 @@
         </a>
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a href="#" class="main-nav-link">How it works</a></li>
-                <li><a href="#" class="main-nav-link">Meals</a></li>
-                <li><a href="#" class="main-nav-link">Testimonials</a></li>
-                <li><a href="#" class="main-nav-link">Pricing</a></li>
-                <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+                <li><a href="#how" class="main-nav-link">How it works</a></li>
+                <li><a href="#meals" class="main-nav-link">Meals</a></li>
+                <li><a href="#testimonials" class="main-nav-link">Testimonials</a></li>
+                <li><a href="#pricing" class="main-nav-link">Pricing</a></li>
+                <li><a href="#cta" class="main-nav-link nav-cta">Try for free</a></li>
             </ul>
         </nav>
 
@@ -46,8 +46,8 @@
                         healthy
                         again. Tailored to your
                         personal tastes and nutritional needs. </p>
-                    <a class="btn btn--full margin-right-sm" href="#">Start eating well</a>
-                    <a class="btn btn--outline" href="#">Learn more&darr;</a>
+                    <a class="btn btn--full margin-right-sm" href="#cta">Start eating well</a>
+                    <a class="btn btn--outline" href="#how">Learn more&darr;</a>
                     <div class="delivered-meals">
                         <div class="delivered-imgs">
                             <img src="./img/customers/customer-1.jpg" alt="Customer photo">
@@ -80,7 +80,7 @@
             </div>
         </section>
 
-        <section class="section-how">
+        <section class="section-how" id="how">
             <div class="container">
                 <span class="subheading">How it works</span>
                 <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-meals">
+        <section class="section-meals" id="meals">
             <div class="container center-text">
                 <span class="subheading">Meals</span>
                 <h2 class="heading-secondary">
@@ -223,7 +223,7 @@
                 <a href="#" class="link">See all recipes &rArr;</a>
             </div>
         </section>
-        <section class="section-testimonials">
+        <section class="section-testimonials" id="testimonials">
             <div class="testimonials-container">
                 <span class="subheading">Testimonials</span>
                 <h2 class="heading-secondary">
@@ -300,7 +300,7 @@
                 </figure>
             </div>
         </section>
-        <section class="section-pricing">
+        <section class="section-pricing" id="pricing">
             <div class="container">
                 <span class="subheading">Pricing</span>
                 <h2 class="heading-secondary">
@@ -411,7 +411,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-cta">
+        <section class="section-cta" id="cta">
             <div class="container">
                 <div class="cta">
                     <div class="cta-text-box">
