--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -48,14 +48,75 @@
                     <form class="sign-up-form" action="#" method="post">
                         <input class="sign-up-item" type="text" placeholder="Name">
                         <input class="sign-up-item" type="email" placeholder="Email">
-                        <input class="sign-up-item" type="password" placeholder="password">
-                        <button class="sign-up-btn sign-up-item">Get Started</button>
+                        <input class="sign-up-item" type="password" placeholder="Password">
+                        <button class="sign-up-btn">Get Started</button>
                     </form>
                 </div>
             </div>
         </section>
+        <section class="social-media-section">
+            <div class="container social-media-container">
+                <div class="social-media-text-box">
+                    <p class="social-media-header">
+                        Social Media
+                    </p>
+                    <p class="social-media-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Aenean euismod bibendum laoreet.
+                    </p>
+                </div>
+                <div class="social-media-img-box">
+                    <ul class="social-media-img-list">
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="logo-facebook"></ion-icon>
+                            </a></li>
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="logo-twitter"></ion-icon>
+                            </a></li>
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="logo-google"></ion-icon>
+                            </a></li>
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="logo-pinterest"></ion-icon>
+                            </a></li>
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="logo-instagram"></ion-icon>
+                            </a></li>
+                        <li class="social-media-img-item"><a href="#">
+                                <ion-icon class="social-media-img" name="globe-outline"></ion-icon>
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="tabs-section">
+            <div class="container tabs-section-container">
+                <div class="tabs">
+                    <ul class="tabs-list">
+                        <li class="tabs-list-item"><span class="tab-text">Tab 1</span></li>
+                        <li class="tabs-list-item"><span class="tab-text">Tab 2</span></li>
+                        <li class="tabs-list-item"><span class="tab-text">Tab 3</span></li>
+                    </ul>
+                </div>
+                <div class="tabs-section-description">
+                    <p class="tabs-description-header">Tabs with soft transitioning effect.</p>
+                    <p class="tabs-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <p class="tabs-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod
+                        bibendum laoreet.</p>
+                    <button class="download-btn">Download</button>
+                </div>
+                <img class="tabs-img" src="./img/town.svg" alt="image town">
+            </div>
+        </section>
     </main>
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
