--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -1,122 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <title>AXIT</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="section-header">
-        <div class="container header-container">
-            <a href="#"><img class="logo-img" src="./img/Logo.png" alt="axit logo small"></a>
-            <nav class="navigation">
-                <ul class="nav-items">
-                    <a class="nav-item" href="#">Features</a>
-                    <a class="nav-item" href="#">About</a>
-                    <a class="nav-item" href="#">Pricing</a>
-                    <a class="nav-item" href="#">Reviews</a>
-                    <a class="nav-item" href="#">Contact</a>
-                </ul>
-            </nav>
-        </div>
+      <div class="container header-container">
+        <a href="#"
+          ><img class="logo-img" src="./img/Logo.png" alt="axit logo small"
+        /></a>
+        <nav class="navigation">
+          <ul class="nav-items">
+            <a class="nav-item" href="#">Features</a>
+            <a class="nav-item" href="#">About</a>
+            <a class="nav-item" href="#">Pricing</a>
+            <a class="nav-item" href="#">Reviews</a>
+            <a class="nav-item" href="#">Contact</a>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-        <section class="hero-section">
-            <div class="container grid grid--2-cols-3-to-2">
-                <div class="hero-description-box">
-                    <p class="logo"><span class="first-part">AX</span><span class="oranged">IT</span></p>
-                    <h1 class="primary-header">MODERN AXURE TEMPLATE
-                        FOR BEAUTIFUL PROTOTYPES</h1>
-                    <hr>
-                    <p class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-                        accumsan et viverra justo commodo.</p>
-                    <button class="download-btn">Download</button>
-                </div>
-                <div class="hero-sign-up-box">
-                    <p class="sign-up-header">Try Your <span class="oranged">FREE</span> Trial Today</p>
-                    <form class="sign-up-form" action="#" method="post">
-                        <input class="sign-up-item" type="text" placeholder="Name">
-                        <input class="sign-up-item" type="email" placeholder="Email">
-                        <input class="sign-up-item" type="password" placeholder="Password">
-                        <button class="sign-up-btn">Get Started</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-        <section class="social-media-section">
-            <div class="container social-media-container">
-                <div class="social-media-text-box">
-                    <p class="social-media-header">
-                        Social Media
+      <section class="hero-section">
+        <div class="container grid grid--2-cols-3-to-2">
+          <div class="hero-description-box">
+            <p class="logo">
+              <span class="first-part">AX</span><span class="oranged">IT</span>
+            </p>
+            <h1 class="primary-header">
+              MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+            </h1>
+            <hr />
+            <p class="hero-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra justo commodo.
+            </p>
+            <button class="download-btn">Download</button>
+          </div>
+          <div class="hero-sign-up-box">
+            <p class="sign-up-header">
+              Try Your <span class="oranged">FREE</span> Trial Today
+            </p>
+            <form class="sign-up-form" action="#" method="post">
+              <input class="sign-up-item" type="text" placeholder="Name" />
+              <input class="sign-up-item" type="email" placeholder="Email" />
+              <input
+                class="sign-up-item"
+                type="password"
+                placeholder="Password"
+              />
+              <button class="sign-up-btn">Get Started</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="social-media-section">
+        <div class="container social-media-container">
+          <div class="social-media-text-box">
+            <p class="section-primary-header">Social Media</p>
+            <p class="social-media-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
+              Aenean euismod bibendum laoreet.
+            </p>
+          </div>
+          <div class="social-media-img-box">
+            <ul class="social-media-img-list">
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="logo-facebook"
+                  ></ion-icon>
+                </a>
+              </li>
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="logo-twitter"
+                  ></ion-icon>
+                </a>
+              </li>
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="logo-google"
+                  ></ion-icon>
+                </a>
+              </li>
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="logo-pinterest"
+                  ></ion-icon>
+                </a>
+              </li>
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="logo-instagram"
+                  ></ion-icon>
+                </a>
+              </li>
+              <li class="social-media-img-item">
+                <a href="#">
+                  <ion-icon
+                    class="social-media-img"
+                    name="globe-outline"
+                  ></ion-icon>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="tabs-section">
+        <div class="container tabs-section-container">
+          <div class="tabs">
+            <ul class="tabs-list">
+              <li class="tabs-list-item">
+                <span class="tab-text">Tab 1</span>
+              </li>
+              <li class="tabs-list-item">
+                <span class="tab-text">Tab 2</span>
+              </li>
+              <li class="tabs-list-item">
+                <span class="tab-text">Tab 3</span>
+              </li>
+            </ul>
+          </div>
+          <div class="tabs-section-description">
+            <h3 class="section-primary-header">
+              Tabs with soft transitioning effect.
+            </h3>
+            <p class="tabs-description-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra justo commodo. Proin sodales pulvinar tempor.
+              Cum sociis natoque penatibus et magnis dis parturient montes.
+            </p>
+            <p class="tabs-description-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet.
+            </p>
+            <button class="download-btn">Download</button>
+          </div>
+          <img class="tabs-img" src="./img/town.svg" alt="image town" />
+        </div>
+      </section>
+      <section class="feature-section">
+        <div class="container">
+          <figure class="feature grid grid--2-cols">
+            <img
+              class="feature-img"
+              src="./img/features/feature_1.jpg"
+              alt="laptop"
+            />
+            <div class="feature-description">
+              <h3 class="section-primary-header">Sub list section</h3>
+              <hr class="orange-line" />
+              <p class="feature-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                accumsan et viverra justo commodo.
+              </p>
+              <ul class="feature-sub-items">
+                <li class="feature-sub-item">
+                  <ion-icon
+                    class="feature-icon"
+                    name="cloud-upload-outline"
+                  ></ion-icon>
+                  <div>
+                    <h4 class="feature-sub-title">Title</h4>
+                    <p class="feature-sub-description">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Aenean euismod bibendum laoreet.
                     </p>
-                    <p class="social-media-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
-                        Aenean euismod bibendum laoreet.
+                  </div>
+                </li>
+                <li class="feature-sub-item">
+                  <ion-icon
+                    class="feature-icon"
+                    name="cloud-download-outline"
+                  ></ion-icon>
+                  <div>
+                    <h4 class="feature-sub-title">Title</h4>
+                    <p class="feature-sub-description">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Aenean euismod bibendum laoreet. Proin gravida dolor sit
+                      amet lacus accumsan et viverra justo commodo.
                     </p>
-                </div>
-                <div class="social-media-img-box">
-                    <ul class="social-media-img-list">
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="logo-facebook"></ion-icon>
-                            </a></li>
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="logo-twitter"></ion-icon>
-                            </a></li>
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="logo-google"></ion-icon>
-                            </a></li>
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="logo-pinterest"></ion-icon>
-                            </a></li>
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="logo-instagram"></ion-icon>
-                            </a></li>
-                        <li class="social-media-img-item"><a href="#">
-                                <ion-icon class="social-media-img" name="globe-outline"></ion-icon>
-                            </a></li>
-                    </ul>
-                </div>
+                  </div>
+                </li>
+              </ul>
             </div>
-        </section>
-        <section class="tabs-section">
-            <div class="container tabs-section-container">
-                <div class="tabs">
-                    <ul class="tabs-list">
-                        <li class="tabs-list-item"><span class="tab-text">Tab 1</span></li>
-                        <li class="tabs-list-item"><span class="tab-text">Tab 2</span></li>
-                        <li class="tabs-list-item"><span class="tab-text">Tab 3</span></li>
-                    </ul>
-                </div>
-                <div class="tabs-section-description">
-                    <p class="tabs-description-header">Tabs with soft transitioning effect.</p>
-                    <p class="tabs-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                        euismod
-                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-                        penatibus et magnis dis parturient montes.
-                    </p>
-                    <p class="tabs-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                        euismod
-                        bibendum laoreet.</p>
-                    <button class="download-btn">Download</button>
-                </div>
-                <img class="tabs-img" src="./img/town.svg" alt="image town">
+          </figure>
+          <figure class="feature grid grid--2-cols">
+            <div class="feature-description">
+              <h3 class="section-primary-header"></h3>
             </div>
-        </section>
+            <div class="feature-img">
+              <p>image</p>
+            </div>
+          </figure>
+        </div>
+      </section>
     </main>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
-
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
